# aos-core-monitor

./: .clang-format  .editorconfig  .gitignore  README.md  settings.gradle.kts
.github/workflows/: clang-format.yml  ktlint.yml
app/: build.gradle.kts
app/src/androidTest/java/com/aoscoremonitor/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/aoscoremonitor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  system_monitor.cpp
app/src/main/java/com/aoscoremonitor/: MainActivity.kt
app/src/main/java/com/aoscoremonitor/diagnostics/: FrameworkAnalyzer.kt  HalInterfaceAnalyzer.kt  LogCollector.kt  NativeSystemMonitor.kt  SecurityInfoCollector.kt  SystemDiagnosticsCollector.kt  SystemInfoCollector.kt
app/src/main/java/com/aoscoremonitor/diagnostics/jni/: NativeSystemMonitor.kt
app/src/main/java/com/aoscoremonitor/ui/navigation/: Screen.kt
app/src/main/java/com/aoscoremonitor/ui/screen/: LogScreen.kt
app/src/main/java/com/aoscoremonitor/ui/screens/: FrameworkAnalysisScreen.kt  HalInfoScreen.kt  LogScreen.kt  NativeSystemMonitorScreen.kt  SecurityInfoScreen.kt  SystemDiagnosticsScreen.kt  SystemInfoScreen.kt  WelcomeScreen.kt
app/src/main/java/com/example/aoscoremonitor/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/aoscoremonitor/: ExampleUnitTest.kt
app/src/test/java/com/example/aoscoremonitor/: ExampleUnitTest.kt
docs/: code-style.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: format.sh
(+9 files in other folders)
